updated index.html and web.js, added public directory with image files

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       /* All form factors */
 
       /* Main body and headings */
-      body{
+      body {
         font-family: 'Varela', Helvetica, Arial, sans-serif;
       }
       .heading {
@@ -77,7 +77,8 @@
       
       .backers {
         background-color: #cccccc;
-        padding: 3% 0%;
+        padding: 2% 0%;
+        margin-top: 4%;
       }
       
       .backers h3 {
@@ -96,7 +97,6 @@
       .statistics h3 {
         color: white;
         font-size: 18px;
-
       } 
       .statistics p {
         color: white;
@@ -128,7 +128,7 @@
       .footer a {
         color: #ccccff;
       }
-    </style>}
+    </style>
     </style>
    </head>
   <body>
@@ -229,17 +229,23 @@
       <div class="row-fluid section1">
         <div class="span7 offset1 copy">
           <p class="lead">The goal of Bashbuildr is to make planning an event easy while minimizing the risk for planners and vendors</h3>
-	  <p>Bashbuildr combines the best elements of services like Yelp, eVite, OpenTable, and Kickstarter 
+	  <p>Bashbuildr combines the best elements of services like Yelp, Evite, OpenTable, and Kickstarter 
 	     to offer a unique approach that not only streamlines the event planning process, but
-             also offers a way for organizers to raise and collect money first before committing
-             and offers assurance to vendors that they will be compensated for last minute cancellations.</p>
+             also offers a way for organizers to raise and collect money first before committing.
+             Bashbuildr also offers assurance to vendors that they will be compensated even for last minute cancellations.</p>
           <p class="lead">Another event scheduler application, <em>really?</em></h3>
           <p>Bashbuildr is different from other event schedulers in that it addresses the 
              funding of an event upfront. Often times, an organizer has a great idea for
              an event, but is usually the one that needs to not only make all of the reservations
-             but also put up the cash upfront. Bashbuildr helps an organizer determine the costs up
+             but also put up the cash initially. Bashbuildr helps an organizer determine the costs up
              front and then establishes that as a funding goal with a timeline in which to raise
-             the money upfront before committing to the event.</p>
+             the money before committing to the event. 
+          </p>
+          <p>Attendees can pay into the event fund ahead of time. If the goal is not reached by the 
+             deadline, the event organizer has the option to commit the remaining funds themselves, 
+             or cancel the event in which case all of the contributors are refunded automatically 
+             (minus a small transaction fee).
+          </p>
         </div>
         <div class="span3 backers">
           <div class="span10 offset1">
