updated index.html, simplified tag line

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Plan an event. Raise the cash. Make reservations. Have a bash. Everyone wins.</p>
+          <p class="lead">Plan an event. Raise the cash. Make reservations. Have a bash.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
