--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
       .order button {
         margin-left: 3px;
       }
-
+      .order a {
+        margin-left: 50px;
+      }
       /* Marketing Copy and Footer */
       .copy {
         padding-top: 2.5%;
@@ -204,7 +206,7 @@
          </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-        <div class="span3 actions">
+        <div class="span4 actions">
           <div class="span12">
             <div class="statistics">
               <div class="span3 offset1">
@@ -236,11 +238,10 @@
             </div>
           </div>
           <div class="span7 offset2 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" data-code="1172c788a47eac5e8ced17303d7e826e" href="https://coinbase.com/checkouts/1172c788a47eac5e8ced17303d7e826e">Preorder with Bitcoin</a>
+		<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
-          <div class="span7 offset2 social">
+          <div class="span8 offset2 social">
              <!-- AddThis Button BEGIN -->
              <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
              <a class="addthis_button_preferred_1"></a>
@@ -279,7 +280,7 @@
              (minus a small transaction fee).
           </p>
         </div>
-        <div class="span3 backers">
+        <div class="span4 backers">
           <div class="span10 offset1">
           	<h3>BACKER REWARDS</h3>
                 <hr/>
@@ -308,7 +309,7 @@
             nunc. Fusce nec egestas sem. Donec fringilla.
           </p>
         </div>
-        <div class="span3 asset">
+        <div class="span4 asset">
           <img class="img-polaroid" src="http://timeoutcdn-test.s3.amazonaws.com/nylegacy/export_images/716/716.ft.x480.swankbar.jpg">
         </div>
       </div>
